Updating and Refactoring start

--- a/School-Managment-Frontend/src/main/web/src/app/auth/login/login.component.html
+++ b/School-Managment-Frontend/src/main/web/src/app/auth/login/login.component.html
@@ -42,7 +42,7 @@
                     </ng-template>
                 </p-messages>
                 <div class="p-col">
-                    <p-button label="{{'login.login-button' | translate }}" class="btn btn-primary btn-block"
+                    <p-button label="{{'login.login-button' | translate }}" class="btn btn-primary btn-block" id = "login"
                         type="submit">
                     </p-button>
                 </div>
