--- a/School-Managment-Frontend/src/main/web/src/app/image-show/edit-show/edit-show.component.html
+++ b/School-Managment-Frontend/src/main/web/src/app/image-show/edit-show/edit-show.component.html
@@ -1,1 +1,7 @@
-<p>edit-show works!</p>
+<div class="grid-container">
+    <app-image-list class="image-list"></app-image-list>
+    <div class="edit-image">
+        <p>edit-show works!</p>
+    </div>
+
+</div>
