udated a lot of frontend stuff

--- a/School-Managment-Frontend/src/main/web/src/app/area/area/area.component.html
+++ b/School-Managment-Frontend/src/main/web/src/app/area/area/area.component.html
@@ -1,1 +1,9 @@
 <p>area works!</p>
+<div class="p-grid">
+  <div class="p-col-12 p-md-6">
+    <app-show-list></app-show-list>
+  </div>
+  <div class="p-col-12 p-md-6">
+    <app-monitor-dashboard [area]="area"></app-monitor-dashboard>
+  </div>
+</div>
