--- a/School-Managment-Frontend/src/main/web/src/app/image-show/edit-show-panel/edit-show-panel.component.html
+++ b/School-Managment-Frontend/src/main/web/src/app/image-show/edit-show-panel/edit-show-panel.component.html
@@ -41,7 +41,7 @@
                                 </div>
                                 <div class="p-field p-d-flex p-jc-evenly">
                                     <!-- <p-button pRipple type="button" icon="pi pi-search" styleClass="p-button-rounded"
-                                        (click)="removeShowPart(i)" ></p-button> -->
+                                        (click)="show(i)" ></p-button> -->
                                     <p-button *ngIf="!showPart.active" pRipple type="button" icon="pi pi-eye-slash"
                                         styleClass="p-button-warning p-button-rounded" (click)="setShowPartActive(showPart, true)">
                                     </p-button>
